[gd_scene load_steps=4 format=2]

[ext_resource path="res://investimento_botao.gd" type="Script" id=1]
[ext_resource path="res://img/Fundo-Celular.png" type="Texture" id=2]
[ext_resource path="res://Celular/3.png" type="Texture" id=3]

[node name="yiq" type="Node2D"]

[node name="Fundo-Celular" type="Sprite" parent="."]
position = Vector2( 320.5, 183.5 )
scale = Vector2( 0.350521, 0.360185 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 290, 220 )
scale = Vector2( 0.508, 0.508 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="Sprite"]
margin_left = -71.0
margin_top = -171.0
margin_right = 136.0
margin_bottom = -118.0
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Sprite"]
margin_left = 12.0
margin_top = 150.0
margin_right = 69.0
margin_bottom = 213.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cdb" type="Button" parent="Sprite"]
margin_left = -75.0
margin_top = -81.0
margin_right = 140.0
margin_bottom = -24.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Sprite/Button" to="Sprite/Button" method="_on_Button_pressed"]
[connection signal="pressed" from="Sprite/Button2" to="Sprite/Button" method="_on_Button2_pressed"]
[connection signal="pressed" from="Sprite/cdb" to="Sprite/Button" method="_on_cdb_pressed"]
